--- a/LKExp-mbed-jpeg_display/.mbedignore
+++ b/LKExp-mbed-jpeg_display/.mbedignore
@@ -1,7 +1,7 @@
 ### Ignored directories to speed up compilation time
 
 test/**
-lib/mbed-os/components/**
+#lib/mbed-os/components/**
 lib/mbed-os/features/cellular/**
 lib/mbed-os/features/cryptocell/**
 lib/mbed-os/features/deprecated_warnings/**
