--- a/LKExp-mbed-jpeg_display/mbed_app.json
+++ b/LKExp-mbed-jpeg_display/mbed_app.json
@@ -2,7 +2,7 @@
 	"target_overrides": {
 		"*": {
 			"target.features": [],
-			"target.components": []
+			"target.components": ["SD_769-Disco","SD"]
 		}
 	}
 }
