Add drivers files (raw)
Three drivers added, only relevant are kept. To select one of them,
change .mbedignore file.
- driver from mbed is functionnal
- driver from github "STMems Standard C Drivers" is partially
  functional. Only driver is functional, examples depend of BSP
Disco-469.
- driver from github "stm32duino" is not functionnal and have to be
  adapted.

--- a/LKExp-mbed-LSM6DSOX_all_drivers/.mbedignore
+++ b/LKExp-mbed-LSM6DSOX_all_drivers/.mbedignore
@@ -22,3 +22,17 @@ lib/mbed-os/features/unsupported/**
 # lib/mbed-os/features/device_key/**
 # lib/mbed-os/features/frameworks/**
 # lib/mbed-os/features/mbedtls/**
+
+
+### mbed-ST_LSM6DSOX
+
+lib/Drivers/mbed-ST_LSM6DSOX/**
+
+### github-STMicroelectronics_STMems_Standard_C_drivers
+
+lib/Drivers/github-STMicroelectronics_STMems_Standard_C_drivers/lsm6dsox_STdC/example/**
+lib/Drivers/github-STMicroelectronics_STMems_Standard_C_drivers/**
+
+### github-stm32duino_LSM6DSOX
+
+lib/Drivers/github-stm32duino_LSM6DSOX/**
