--- a/LKExp-LCD-Mbed_JPEG_Display/mbed_app.json
+++ b/LKExp-LCD-Mbed_JPEG_Display/mbed_app.json
@@ -2,7 +2,7 @@
 	"target_overrides": {
 		"*": {
 			"target.features": [],
-			"target.components": ["SD_769-Disco","SD"]
+			"target.components": []
 		}
 	}
 }
