Add Compass and Temperature and fixes
IMPORTANT : Code tested with Leka mainboard with a custom target
configuration on mbed. Configuration is not given yet.

* Add temperature sensor HTS221, some correction has to be done on
  getData()
* Add compass LSM303AGR
* Enable only relevant pins
* Fix AnalogIn variable member initialized by reference

--- a/LKExp-Maiboard-MZRobotic_Tests/.mbedignore
+++ b/LKExp-Maiboard-MZRobotic_Tests/.mbedignore
@@ -9,6 +9,9 @@ lib/mbed-os/features/deprecated_warnings/**
 #lib/mbed-os/features/FEATURE_BLE/**
 lib/mbed-os/features/FEATURE_BOOTLOADER/**
 
+lib/mbed-os/features/storage/**
+lib/mbed-os/drivers/source/usb/**
+
 lib/mbed-os/features/lorawan/**
 lib/mbed-os/features/lwipstack/**
 
