--- a/LKExp-Sensors-LSM6DSOX-Data_Gathering/mbed_app.json
+++ b/LKExp-Sensors-LSM6DSOX-Data_Gathering/mbed_app.json
@@ -2,7 +2,9 @@
 	"target_overrides": {
 		"*": {
 			"target.features": [],
-			"target.components": []
+			"target.components": [],
+			"platform.callback-nontrivial": true
 		}
 	}
 }
+
