--- a/LKExp-Maiboard-MZRobotic_Tests/.mbedignore
+++ b/LKExp-Maiboard-MZRobotic_Tests/.mbedignore
@@ -9,7 +9,7 @@ lib/mbed-os/features/deprecated_warnings/**
 #lib/mbed-os/features/FEATURE_BLE/**
 lib/mbed-os/features/FEATURE_BOOTLOADER/**
 
-lib/mbed-os/features/storage/**
+#lib/mbed-os/features/storage/**
 lib/mbed-os/drivers/source/usb/**
 
 lib/mbed-os/features/lorawan/**
