--- a/LKExp-Maiboard-MZRobotic_Tests/.mbedignore
+++ b/LKExp-Maiboard-MZRobotic_Tests/.mbedignore
@@ -2,7 +2,7 @@
 
 test/**
 #lib/mbed-os/components/**
-lib/mbed-os/features/cellular/**
+#lib/mbed-os/features/cellular/**
 lib/mbed-os/features/cryptocell/**
 lib/mbed-os/features/deprecated_warnings/**
 
@@ -16,7 +16,7 @@ lib/mbed-os/features/lorawan/**
 lib/mbed-os/features/lwipstack/**
 
 lib/mbed-os/features/nanostack/**
-lib/mbed-os/features/netsocket/**
+#lib/mbed-os/features/netsocket/**
 lib/mbed-os/features/nfc/**
 lib/mbed-os/features/unsupported/**
 
