--- a/LKExp-Firmware_update-Serial_update/BOOTLOADER/mbed_app.json
+++ b/LKExp-Firmware_update-Serial_update/BOOTLOADER/mbed_app.json
@@ -1,6 +1,7 @@
 {
 	"target_overrides": {
 		"*": {
+			"target.restrict_size": "0x10000",
 			"target.features": [],
 			"target.components": []
 		}
