Step 2 - Send new application
* Now possible to send an application in .hex through Serial.
* Python script read and send line by line the .hex file and wait an ACK char
from receiver after delivery.
* Bootloader erase prior to write program.
* Program received used hex file structure, included the checksum.
* Offset changed due to growing size of bootloader.
* LED added in Application to have visual confirmation.

--- a/LKExp-Firmware_update-Serial_update/BOOTLOADER/mbed_app.json
+++ b/LKExp-Firmware_update-Serial_update/BOOTLOADER/mbed_app.json
@@ -1,7 +1,8 @@
 {
 	"target_overrides": {
 		"*": {
-			"target.restrict_size": "0x10000",
+			"target.restrict_size": "0x20000",
+			"target.printf_lib": "std",
 			"target.features": [],
 			"target.components": []
 		}
