Add watchdog example from mbed
Adapt mbed_app.json to generate .hex file

--- a/LKExp-Watchdog-Infinite_loop_and_Fatal_error/mbed_app.json
+++ b/LKExp-Watchdog-Infinite_loop_and_Fatal_error/mbed_app.json
@@ -2,7 +2,8 @@
 	"target_overrides": {
 		"*": {
 			"target.features": [],
-			"target.components": []
+			"target.components": [],
+			"target.OUTPUT_EXT": "hex"
 		}
 	}
 }
