Step 2.1 - Receive app in app - NOT TESTED
* Move reception .bin file in a new application named RECEIVER_APP
* Only write from QSPI to MCU is kept in BOOTLOADER
* Both actions above are gathered in a same file name Updater
* Due to upgrade of mbed, some new issue linked to BufferedSerial lead
  to a buffer that cannot check readiblity of serial.
* So it should to be tested before approved

--- a/LKExp-Firmware_update-Serial_update/BOOTLOADER/mbed_app.json
+++ b/LKExp-Firmware_update-Serial_update/BOOTLOADER/mbed_app.json
@@ -4,7 +4,8 @@
 			"target.restrict_size": "0x20000",
 			"target.printf_lib": "std",
 			"target.features": [],
-			"target.components": []
+			"target.components": [],
+			"target.lse_available": 0
 		}
 	}
 }
