--- a/LKExp-Firmware_update-Serial_update/RECEIVER_APP/mbed_app.json
+++ b/LKExp-Firmware_update-Serial_update/RECEIVER_APP/mbed_app.json
@@ -4,7 +4,8 @@
 			"target.bootloader_img": "../BOOTLOADER/BUILD/DISCO_F769NI/GCC_ARM/BOOTLOADER.bin",
 			"target.app_offset": "0x20000",
 			"target.features": [],
-			"target.components": []
+			"target.components": [],
+			"target.lse_available": 0
 		}
 	}
 }
