Add Pelion in Disco, configure mandatory
Pelion example is added in main, and reorganized to be done after
checking ethernet and qspi access.

Storage-size was mandatory in configuration for compilation and was added.

Now Disco is available in Pelion Portal with this configuration. The
counter is accessible and increment as Disco display it in Serial.

Update is not possible (yet)

--- a/LKExp-Firmware-Disco-Pelion_via_ethernet/APPLICATION/mbed_app.json
+++ b/LKExp-Firmware-Disco-Pelion_via_ethernet/APPLICATION/mbed_app.json
@@ -48,7 +48,8 @@
         "DISCO_F769NI": {
             "target.bootloader_img"                     : "../BOOTLOADER/BUILD/DISCO_F769NI/GCC_ARM/BOOTLOADER.bin",
             "target.header_offset"                      : "0x10000",
-            "target.app_offset"                         : "0x10400"
+            "target.app_offset"                         : "0x10400",
+            "update-client.storage-size"                : "((MBED_ROM_START + MBED_ROM_SIZE - MBED_CONF_UPDATE_CLIENT_APPLICATION_DETAILS + 1024) * MBED_CONF_UPDATE_CLIENT_STORAGE_LOCATIONS)"
         }
     },
     "config": {
