--- a/LKExp-Audio-Robot-Mbed_Audio_playback_and_record/mbed_app.json
+++ b/LKExp-Audio-Robot-Mbed_Audio_playback_and_record/mbed_app.json
@@ -3,6 +3,12 @@
 		"*": {
 			"target.features": [],
 			"target.components": []
+		},
+		"LEKA_V1_0_DEV": {
+			"sd.SPI_CS": "SD_SPI_CS",
+			"sd.SPI_MISO": "SD_SPI_MISO",
+			"sd.SPI_MOSI": "SD_SPI_MOSI",
+			"sd.SPI_CLK": "SD_SPI_SCK"
 		}
 	}
 }
